# baby-basics

./: .firebaserc  Dockerfile  README.md  firestore.indexes.json  firestore.rules  ideas-proto2.txt  ideas-proto2.txt.bak  index.html  package-lock.json  package.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
backend/: .gitignore  main.py  pyproject.toml
backend/config/: __init__.py
backend/database/: db.py
backend/schemas/: __init__.py  schemas.py
backend/templates/: index.html  protected.html
backend/tests/: conftest.py  test_search.py
functions/: package-lock.json
src/: App.js  SearchBarAlertDialog.jsx  defaultStyle.js  firebaseConfig.js  index.js  main.jsx
src/components/: BabyFeedTrackingTemplate.jsx  ChatMessage.jsx  ColorModeToggleButton.jsx  CustomPopover.jsx  DMChatMessage.jsx  DiaperRow.jsx  FloatingActionButtons.jsx  FloatingActionButtonsBabyInfo.jsx  FloatingActionButtonsMaternalInfo.jsx  FormQuestion.jsx  GeneralAccordianItem.jsx  GridContainer.jsx  LandingPageCard.jsx  LoadingPageSpinner.jsx  MissingDataMessage.jsx  ProgressBar.jsx  ProgressTabFormatter.jsx  SearchBarAlertDialog.jsx  StyledSelect.jsx  Timer.jsx
src/context/: Context.js
src/images/: maternalPageImages.js
src/pages/: AppointmentForumPage.jsx  BabyFeedTrackingPage.jsx  BabyHealthForumPage.jsx  BabyPicturePage.jsx  BabySleepPage.jsx  CalendarPage.jsx  ChatPage.jsx  DiaperTrackingPage.jsx  DirectMessagePage.jsx  EventsPage.jsx  ForumMessagePage.jsx  ForumPage.jsx  GoodsAndServicesForumPage.jsx  GraphPage.jsx  GrowthPage.jsx  (+16 more)
(+71 files in other folders)
